# fprintd

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  bacon.toml  cliff.toml  committed.toml  deny.toml  lefthook.yml  mise.toml  release-plz.toml  rust-toolchain.toml  typos.toml
crates/fp-backend-libfprint/: Cargo.toml
crates/fp-backend-libfprint/src/: backend.rs  convert.rs  device.rs  lib.rs  print.rs  progress.rs  storage.rs
crates/fp-backend-libfprint/tests/: virtual.rs
crates/fp-backend-native/: Cargo.toml
crates/fp-backend-native/src/: backend.rs  builder.rs  detector.rs  device.rs  frame.rs  frame_source.rs  image_backend.rs  image_device.rs  lib.rs  matcher.rs  scenario.rs  store.rs  synth.rs  yield_now.rs
crates/fp-backend-native/src/sources/: file.rs  mod.rs  synthetic.rs
crates/fp-backend-native/src/usb/: mock_tests.rs  mod.rs  proto.rs  source.rs  transport.rs  vfs5011.rs
crates/fp-backend-native/tests/: backend.rs  cancel.rs  end_to_end.rs  enroll.rs  file_source.rs  image_device.rs  lifecycle.rs  real_matching.rs  send.rs  storage.rs  verify_identify.rs
crates/fp-core/: Cargo.toml
crates/fp-core/src/: device.rs  error.rs  feature.rs  finger.rs  lib.rs  print.rs
crates/fp-fp3/: Cargo.toml
crates/fp-fp3/src/: codec.rs  date.rs  error.rs  gvariant.rs  lib.rs
crates/fp-fp3/tests/: libfprint_fixture.rs  nbis_match_seam.rs  roundtrip.rs
crates/fp-fp3/tests/fixtures/: libfprint_virtual_device.fp3
crates/fp-integration/: Cargo.toml
crates/fp-integration/src/: composite.rs  lib.rs
crates/fp-integration/tests/: composite.rs
crates/fp-integration/tests/common/: mod.rs
crates/fp-mindtct/: Cargo.toml
crates/fp-mindtct/src/: block.rs  consts.rs  image.rs  lib.rs  remove.rs  ridges.rs  util.rs  xyt.rs
crates/fp-mindtct/src/detect/: chaincod.rs  contour.rs  line.rs  loops.rs  matchpat.rs  mod.rs
crates/fp-mindtct/tests/: golden.rs
crates/fprint-backend-libfprint/: CHANGELOG.md  Cargo.toml  README.md
crates/fprint-backend-libfprint/src/: backend.rs  convert.rs  device.rs  ffi.rs  lib.rs  print.rs  progress.rs  storage.rs  worker.rs
crates/fprint-backend-libfprint/tests/: virtual.rs  virtual_image.rs
crates/fprint-backend-native/: Cargo.toml
crates/fprint-backend-native/src/: backend.rs  builder.rs  detector.rs  device.rs  device_db.rs  frame.rs  frame_source.rs  image_backend.rs  image_device.rs  lib.rs  matcher.rs  scenario.rs  store.rs  synth.rs  test_exec.rs  yield_now.rs
crates/fprint-backend-native/tests/: backend.rs  cancel.rs  device_db.rs  end_to_end.rs  enroll.rs  file_source.rs  image_device.rs  lifecycle.rs  real_matching.rs  reference_replay.rs  send.rs  storage.rs  verify_identify.rs
crates/fprint-bozorth3/: Cargo.toml  README.md  REUSE.toml  katex-header.html
crates/fprint-bozorth3/examples/: match_xyt.rs
crates/fprint-bozorth3/src/: cluster.rs  consts.rs  inter.rs  intra.rs  lib.rs  xyt.rs
crates/fprint-bozorth3/tests/: golden.rs  overflow_edges.rs  properties.rs  smoke.rs  totality.rs
crates/fprint-cli/: Cargo.toml
crates/fprint-cli/src/: main.rs
crates/fprint-core/: Cargo.toml  README.md
crates/fprint-core/src/: device.rs  error.rs  feature.rs  finger.rs  lib.rs  print.rs
crates/fprint-driverkit/: Cargo.toml
crates/fprint-driverkit/src/: cassette.rs  doctor.rs  frame.rs  lib.rs  main.rs  matchcmd.rs  probe.rs  record.rs  replay.rs  shell.rs  ship.rs
crates/fprint-driverkit/tests/: diag_golden.rs  newdriver.rs
crates/fprint-fp3/: CHANGELOG.md  Cargo.toml  README.md
crates/fprint-fp3/examples/: roundtrip.rs
crates/fprint-fp3/src/: codec.rs  date.rs  error.rs  gvariant.rs  lib.rs
crates/fprint-fp3/tests/: libfprint_fixture.rs  malformed.rs  nbis_match_seam.rs  property.rs  regressions.rs  roundtrip.rs  zvariant_oracle.rs
crates/fprint-integration/: Cargo.toml
crates/fprint-integration/src/: composite.rs  lib.rs
crates/fprint-integration/tests/: composite.rs
crates/fprint-mindtct/: Cargo.toml  README.md  REUSE.toml
crates/fprint-mindtct/LICENSES/: LicenseRef-NBIS-PD.txt
crates/fprint-mindtct/examples/: detect_pgm.rs
crates/fprint-mindtct/src/: binarize.rs  block.rs  consts.rs  image.rs  init.rs  lib.rs  maps.rs  num.rs  params.rs  quality.rs  remove.rs  ridges.rs  util.rs  xyt.rs
crates/fprint-mindtct/tests/: bounds.rs  corpus_adequacy.rs  golden.rs  regressions.rs  validity.rs
crates/fprint-pipeline/: Cargo.toml  README.md
crates/fprint-pipeline/examples/: enroll_verify.rs
crates/fprint-pipeline/src/: detector.rs  lib.rs  matcher.rs
crates/fprint-pipeline/tests/: end_to_end.rs
crates/fprint-testkit/: Cargo.toml
crates/fprint-testkit/src/: bytes.rs  exec.rs  gen.rs  lib.rs
crates/fprintd/: Cargo.toml
crates/fprintd-rs/: Cargo.toml
crates/fprintd-rs/dbus/: fprintd.service.in  net.reactivated.Fprint.service.in
crates/fprintd-rs/src/: actor.rs  authorizer.rs  command.rs  device.rs  error.rs  lib.rs  main.rs  names.rs  status.rs  storage.rs
crates/fprintd-rs/tests/: dbus_integration.rs
crates/fprintd/dbus/: fprintd-rs.service.in  fprintd.service.in  net.reactivated.Fprint.conf  net.reactivated.Fprint.service.in  net.reactivated.fprint.device.policy
crates/fprintd/src/: actor.rs  authorizer.rs  command.rs  device.rs  error.rs  lib.rs  main.rs  manager.rs  names.rs  sleep.rs  status.rs  storage.rs
crates/fprintd/tests/: dbus_authorization.rs  dbus_claim_lifetime.rs  dbus_client_isolation.rs  dbus_concurrent_start.rs  dbus_delete_isolation.rs  dbus_device_shape.rs  dbus_integration.rs  dbus_reconcile_orphan.rs  dbus_result_confusion.rs
docs/: README.md  (+11 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bozorth3_match.rs  capture_import.rs  fp3_fixed_point.rs  fp3_from_bytes.rs  mindtct_detect.rs
fuzz/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: capture_golden.rs  ci.rs  deps.rs  device_db.rs  docker.rs  driver_check.rs  fuzz.rs  hw_checklist.rs  lint.rs  main.rs  mutants.rs  oracle.rs  publish.rs  references.rs  sloc.rs  sync_licenses.rs  unit.rs
(+353 files in other folders)
