[package]
name = "xtask"
description = "Developer tasks that need real orchestration, as a program rather than shell embedded in a task runner. Run with `cargo xtask <task>`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Tooling, not the stack. It implements no fprint-core trait and nothing depends on it; it is a
# workspace member only so `clippy`/`fmt`/`test --workspace` hold it to the same bar as the rest.
publish = false

[dependencies]
# Deliberately none. A task runner that needs a dependency tree to shell out to Docker has
# defeated its own purpose, and this crate is in the lockfile every published crate resolves
# against.

[lints]
workspace = true
