[package]
name = "xtask"
description = "Developer tasks that need real orchestration, as a program rather than shell embedded in a task runner. Run with `cargo xtask <task>`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Tooling, not the stack. It implements no fprint-core trait and nothing depends on it; it is a
# workspace member only so `clippy`/`fmt`/`test --workspace` hold it to the same bar as the rest.
publish = false

[dependencies]
# The dependency linter reads the *resolved* graph, not manifest text: a `package = "..."` rename,
# a transitive third-party edge into a charter crate, and the exact workspace membership are facts
# only the resolver holds. `cargo metadata` is the resolver's own answer. xtask ships in nothing, so
# this reaches no published crate.
cargo_metadata = "0.19"
# Reads release-plz.toml to check it against the resolved `publish = false` set. Parsing config is
# not the linter's job to hand-roll.
toml = "1.1"
# Reads the JSON `cargo xtask hw-checklist --json` emits, so `driver-check` reports its pending count
# rather than re-deriving it. Already in the graph behind cargo_metadata, so this pins no new version.
serde_json = "1"

[lints]
workspace = true
