[package]
name = "fp-backend-native"
description = "Pure-Rust fp-core backend: an in-memory, deterministic virtual fingerprint device for offline testing of enroll/verify/identify and the fprintd daemon. Real USB/SPI drivers land here later."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fp-core = { workspace = true }
# The pure-Rust minutiae matcher a real host-image driver uses to score NBIS templates. The virtual
# device keeps its non-biometric byte-equality stub; `matcher::nbis_match_score` is the real seam,
# exercised end-to-end (enroll -> FP3 -> match) by fp-fp3's integration test.
fp-bozorth3 = { workspace = true }
# Otherwise deliberately nothing: no async runtime, no USB, no serialization. Straight-line async
# fns + a hand-rolled yield future (core::future).

[lints]
workspace = true
