[package]
name = "fp-core"
description = "Modern, GObject-free Rust core for fingerprint readers: device/print domain model and backend traits, shared by a libfprint (FFI) shim backend and native Rust drivers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Intentionally dependency-free for now: this crate is the pure domain model + traits.
# Serialization (FP3/GVariant via zvariant), async runtime glue, and USB transport live
# in downstream crates so fp-core stays embeddable and platform-agnostic.

[lints]
workspace = true
