[package]
name = "fp-mindtct"
description = "Pure-Rust MINDTCT minutiae detector: an original, dependency-free reimplementation of NIST NBIS's public-domain fingerprint minutiae-detection algorithm, xyt-exact against the stock C tool."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
# NOT the workspace license (MIT OR Apache-2.0): this crate is an original reimplementation of
# the public-domain NBIS MINDTCT algorithm, quarantined under its own SPDX id so the permissive
# core stays clean. See ARCHITECTURE.md §Provenance & licensing and LICENSES/LicenseRef-NBIS-PD.txt.
license = "LicenseRef-NBIS-PD"
authors.workspace = true

[dependencies]
# Zero dependencies, on purpose: this is a self-contained public-domain image-processing kernel. It
# does NOT depend on fp-core — its input is an 8-bit grayscale image and its output the xyt (x, y,
# theta) minutiae triple, an interoperability fact, so it defines its own `Minutia`. The consumer
# (fp-backend-native) owns the Minutia -> fp_core::Minutia conversion, keeping the PD/permissive
# licence boundary free of any code coupling.

[lints]
workspace = true
