[package]
name = "fprint-backend-libfprint"
description = "M1 shim: implements fprint-core's Backend/Device by dynamically linking the C libfprint via the libfprint-rs FFI binding. Linux-only, !Send."
version.workspace = true
edition.workspace = true
# Not the workspace's 1.82: the pinned `libfprint-rs`/`libfprint-sys` are `edition = "2024"`,
# which needs 1.85. Declared here rather than at the root, where the pure crates would inherit it.
rust-version = "1.85"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["fingerprint", "libfprint", "ffi", "fprintd", "linux"]
categories = ["authentication", "hardware-support", "api-bindings"]

# Linux-only crate: docs.rs must build for the Linux target, or the `#![cfg(target_os = "linux")]`
# in lib.rs empties it and there is nothing to document.
[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

# Every dependency is gated to Linux so the (Windows) workspace stays lean and resolvable:
# on any other target this crate compiles to an empty module (see the `#![cfg]` in lib.rs)
# and needs none of the glib/libfprint stack.
[target.'cfg(target_os = "linux")'.dependencies]
fprint-core = { workspace = true }
fprint-fp3 = { workspace = true }
libfprint-rs = "=0.3.1"
libfprint-sys = "=0.2.0"
glib = "0.21"
gio = "0.21"

# Gated to Linux like everything else here: the tests these serve are `#![cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
# The executor the virtual-driver tests drive futures with. It is `unsafe`-free, which a hand-rolled
# `RawWaker` here would not be — this crate is the FFI quarantine, and its quarantine should hold
# only what the FFI actually needs.
fprint-testkit = { workspace = true }

[features]
# Opt-in integration test that drives the real libfprint `virtual_device` driver over its
# debug socket. Off by default because it needs libfprint built with the virtual drivers and
# the `FP_VIRTUAL_DEVICE` environment contract; enabled in the Docker verification stage.
virtual = []

[lints]
workspace = true
