# SPDX-FileCopyrightText: 2026 fprintd (pure-Rust) contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fprint-backend-libfprint"
description = "M1 shim: implements fprint-core's Backend/Device by dynamically linking the C libfprint, owning the FFI directly via libfprint-sys. Linux-only, !Send."
version.workspace = true
edition.workspace = true
# Not the workspace's 1.82: `libfprint-sys` is `edition = "2024"`, which needs 1.85. Declared here
# rather than at the root, where the pure crates would inherit it.
rust-version = "1.85"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/fprint-backend-libfprint"
keywords = ["fingerprint", "libfprint", "ffi", "fprintd", "linux"]
categories = ["authentication", "hardware-support", "api-bindings"]

# Linux-only crate: docs.rs must build for the Linux target, or the `#![cfg(target_os = "linux")]`
# in lib.rs empties it and there is nothing to document.
[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

# Every dependency is gated to Linux so the (Windows) workspace stays lean and resolvable:
# on any other target this crate compiles to an empty module (see the `#![cfg]` in lib.rs)
# and needs none of the glib/libfprint stack.
[target.'cfg(target_os = "linux")'.dependencies]
fprint-core = { workspace = true }
fprint-fp3 = { workspace = true }
# The shim owns the libfprint FFI directly: it calls the raw `libfprint-sys` entry points and
# manages the GObject lifetime itself. A normal caret — no workaround depends on a point release
# now that the binding is gone — keeps a published library from forcing one patch on the graph.
libfprint-sys = "0.2"
glib = "0.21"
gio = "0.22"
# The per-device worker thread hands each operation's reply (oneshot) and progress (mpsc) back to
# the caller's future over these runtime-agnostic channels — no async runtime is pulled in. Both
# already resolve in the tree via glib, so naming them adds no crate to the graph; `futures-core`
# names the `Stream` trait used to drain progress without reaching for `futures-util`.
futures-channel = "0.3"
futures-core = "0.3"

# Gated to Linux like everything else here: the tests these serve are `#![cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
# The executor the virtual-driver tests drive futures with. It is `unsafe`-free, which a hand-rolled
# `RawWaker` here would not be — this crate is the FFI quarantine, and its quarantine should hold
# only what the FFI actually needs.
fprint-testkit = { workspace = true }

[features]
# Opt-in integration test that drives the real libfprint `virtual_device` driver over its
# debug socket. Off by default because it needs libfprint built with the virtual drivers and
# the `FP_VIRTUAL_DEVICE` environment contract; enabled in the Docker verification stage.
virtual = []

[lints]
workspace = true
