[package]
name = "fprint-backend-native"
description = "Pure-Rust fprint-core backend: a deterministic virtual fingerprint device plus a host-image matching pipeline (image -> minutiae -> match) for offline testing of enroll/verify/identify and the fprintd daemon. Includes an experimental, hardware-unverified USB capture seam (see docs/adding-a-driver.md)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Internal: a virtual/test backend plus an experimental, hardware-unverified capture seam. It is
# nobody's dependency in a shipped artifact (the daemon reaches it only through dev-dependencies),
# so it stays off crates.io rather than carrying a semver promise for a test fixture.
publish = false

[features]
# Off by default: a default build (Windows/pure) pulls no USB stack at all. `usb` activates the real
# `nusb`-backed transport (`NusbTransport`); the protocol, driver, and mock-driven tests are always
# built and need no feature. `hwtest` gates any test that requires a physical sensor to be present.
#
# NOTE: `usb`/`hwtest` gate the *experimental*, hardware-unverified capture seam — an open invitation,
# not a project goal (see the `usb` module docs, ARCHITECTURE.md §Non-goals, docs/adding-a-driver.md).
default = []
usb = ["dep:nusb"]
hwtest = []

[dependencies]
fprint-core = { workspace = true }
# The pure-Rust minutiae matcher a real host-image driver uses to score NBIS templates. The virtual
# device keeps its non-biometric byte-equality stub; `matcher::nbis_match_score` is the real seam,
# exercised end-to-end (enroll -> FP3 -> match) by fprint-fp3's integration test.
fprint-bozorth3 = { workspace = true }
# The pure-Rust MINDTCT minutiae detector a real host-image driver runs on a captured frame. Its
# public-domain xyt output is converted to `fprint_core::Minutia` in `detector`, closing the
# image -> minutiae -> match loop (see `detector`, exercised end-to-end by tests/end_to_end.rs).
fprint-mindtct = { workspace = true }
# The real USB transport, behind the optional `usb` feature only: a default build resolves the crate
# graph but compiles no USB code. Our wrapper is `#![forbid(unsafe_code)]`; nusb's internal `unsafe`
# is nusb's concern, quarantined to the leaf transport as `ARCHITECTURE.md` requires.
nusb = { version = "0.1", optional = true }
# Otherwise deliberately nothing: no async runtime, no serialization. Straight-line async fns + a
# hand-rolled yield future (core::future).

[lints]
workspace = true
