[package]
name = "fprint-backend-native"
description = "Pure-Rust fprint-core backend: a deterministic virtual fingerprint device plus a host-image matching pipeline (image -> minutiae -> match) for offline testing of enroll/verify/identify and the fprintd daemon. Includes an experimental, hardware-unverified USB capture seam (see docs/adding-a-driver.md)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Internal: a virtual/test backend plus an experimental, hardware-unverified capture seam. It is
# nobody's dependency in a shipped artifact (the daemon reaches it only through dev-dependencies),
# so it stays off crates.io rather than carrying a semver promise for a test fixture.
publish = false

[features]
# Off by default: a default build (Windows/pure) pulls no USB stack at all. `usb` activates the real
# `nusb`-backed transport (`NusbTransport`); the protocol, driver, and mock-driven tests are always
# built and need no feature.
#
# NOTE: `usb` gates the *experimental*, hardware-unverified capture seam — a non-goal
# (see the `usb` module docs, ARCHITECTURE.md §Non-goals, docs/adding-a-driver.md).
default = []
usb = ["dep:nusb"]
# Off by default: derives `Serialize`/`Deserialize` on the wire model (`UsbTransfer`/`UsbId`/`Session`)
# so a captured session round-trips through a file. The driver-author toolkit turns it on to read and
# write `.cassette` recordings; a plain build carries no serialization code.
serde = ["dep:serde"]

[dependencies]
fprint-core = { workspace = true }
# The published host-image pipeline: image -> minutiae -> template -> match. The virtual device keeps
# its non-biometric byte-equality stub; the real host-image seam (`extract_minutiae`,
# `template_from_images`, `nbis_match_score`, `nbis_identify`) lives in `fprint-pipeline` and is
# re-exported here for this crate's own consumers. Exercised end-to-end by tests/end_to_end.rs and
# fprint-fp3's integration test.
fprint-pipeline = { workspace = true }
# The pure-Rust MINDTCT detector, used directly for its borrowing `GrayImage` input type: a
# `crate::Frame` is borrowed as a `GrayImage` for one detection pass (see `frame.rs`).
fprint-mindtct = { workspace = true }
# The pure-Rust BOZORTH3 matcher, named directly so the device/builder docs can link its match seam;
# the scoring itself goes through `fprint-pipeline`.
fprint-bozorth3 = { workspace = true }
# The real USB transport, behind the optional `usb` feature only: a default build resolves the crate
# graph but compiles no USB code. Our wrapper is `#![forbid(unsafe_code)]`; nusb's internal `unsafe`
# is nusb's concern, quarantined to the leaf transport as `ARCHITECTURE.md` requires.
nusb = { version = "0.2", optional = true }
# The wire model's serialization, behind the optional `serde` feature only: a default build derives
# nothing. Payload bytes are written as a hex string (see `usb::wire`), so a `.cassette` reads and
# diffs as text.
serde = { version = "1", features = ["derive"], optional = true }
# Otherwise deliberately nothing: no async runtime. Straight-line async fns + a hand-rolled yield
# future (core::future).

[lints]
workspace = true

[dev-dependencies]
# The executor every test here drives futures with, and the deterministic sources the property
# suites draw from. Version-less so `cargo publish` strips it — this crate is `publish = false`
# either way, and `cargo xtask lint` refuses the testkit anywhere but a dev table.
fprint-testkit = { workspace = true }
