[package]
name = "fprint-bozorth3"
description = "Pure-Rust BOZORTH3 minutiae matcher: an original, dependency-free reimplementation of NIST NBIS's public-domain fingerprint matching algorithm, score-exact against the stock C tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# NOT the workspace license (MIT OR Apache-2.0): this crate is an original reimplementation of
# the public-domain NBIS BOZORTH3 algorithm, quarantined under its own SPDX id so the permissive
# core stays clean. See ARCHITECTURE.md §Provenance & licensing and LICENSES/LicenseRef-NBIS-PD.txt.
license = "LicenseRef-NBIS-PD"
repository.workspace = true
authors.workspace = true

[dependencies]
# Zero dependencies, on purpose: this is a self-contained public-domain arithmetic kernel. It does
# NOT depend on fprint-core — its input is the xyt (x, y, theta) triple, an interoperability fact, so it
# defines its own `Minutia`. The consumer (fprint-backend-native) owns the fprint_core::Minutia -> Minutia
# conversion, keeping the PD/permissive licence boundary free of any code coupling.

[lints]
workspace = true
