[package]
name = "fprint-bozorth3"
description = "Pure-Rust BOZORTH3 minutiae matcher: a faithful, dependency-free port of NIST NBIS's public-domain fingerprint matching algorithm, score-exact against the stock C tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# The workspace license, like every other crate here. This code is our ORIGINAL work written from
# the stock NBIS spec, so it is ours to license; NBIS's own public-domain status (17 USC §105) is a
# fact about NIST's code, not ours, and public domain imposes no obligation to quarantine against.
# The NBIS lineage is recorded as provenance, not as a licence — see ARCHITECTURE.md §Provenance.
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Zero dependencies, on purpose: this is a self-contained arithmetic kernel. It does NOT depend on
# fprint-core — its input is the xyt (x, y, theta) triple, an interoperability fact, so it defines its
# own `Minutia`. The consumer (fprint-backend-native) owns the fprint_core::Minutia -> Minutia
# conversion. That keeps the kernel usable by anyone with minutiae, with no coupling to this
# project's domain model.

[lints]
workspace = true
